Task_1_1_2 tests done + eng